# tdestyle-Q4WIN10

./: CMakeCache.txt  CMakeL10n.txt  CMakeLists.txt  Makefile  Makefile.am  README.md  build_step_by_step.md  combobox.cpp  create_deb.sh  q4win10.themerc  q4win10style.cpp  q4win10style.h  spinbox.cpp
config/: CMakeL10n.txt  CMakeLists.txt  Makefile  Makefile.am  q4win10styleconf.cpp  q4win10styleconf.h
